--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
         <button id="button-siguiente">Siguiente</button>
       </div>  
-      <p id="error-text">Debe seleccionar una respuesta</p>      
-      
+      <p id="error-text">Debe seleccionar una respuesta</p>
+      <p id="sin-respuesta-text">La pregunta no tiene respuesta</p>
     </div>
     <script src="script.js"></script>
 </body>
