solo se dejó boton de comprobar

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
       <h3 id="contador-container">0 de 20 preguntas</h3>
       <div id="button-simulador-container">
         <button id="button-anterior">Anterior</button>      
-        <div style="display:flex; justify-content: center;align-items: center;">
-          <button id="button-verificar">Verificar</button>
+        <div style="display:flex; justify-content: center;align-items: center;">          
           <button id="button-comprobar">Comprobar</button>
         </div>
         <button id="button-siguiente">Siguiente</button>
       </div>  
-      <p id="error-text">Debe seleccionar una respuesta</p>
+      <p id="error-text">Click en Comprobar para verificar o saber la respuesta</p>
       <p id="sin-respuesta-text">La pregunta no tiene respuesta</p>
     </div>
     <script src="script.js"></script>
